syntax= "proto3";

package pb;

// import "user.proto";
import "rpc_create_user.proto";
import "rpc_login_user.proto";
import "rpc_handshake.proto";

option go_package = "ms_auth/pb";

service Authen {
    rpc CreateUser (CreateUserMessage) returns (CreateUserResponse) {};
    rpc Login (LoginMessage) returns (LoginResponse) {};
    rpc Handshake (HandshakeRequest) returns (HandshakeResponse) {};
}

